--- a/test.html
+++ b/test.html
@@ -4,6 +4,7 @@
     </head>
     <body>
         <img id="image-1234" src=""/>
+        <p id="test">The test passed if text is green <span id="testSpan"></span></p>
         <script src="test.js" type="text/javascript"> </script>
     </body>
 </html>
